End of section 5

--- a/client/package.json
+++ b/client/package.json
@@ -21,8 +21,10 @@
     "@angular/router": "~11.2.7",
     "bootstrap": "^4.6.0",
     "font-awesome": "^4.7.0",
+    "jquery": "^3.6.0",
     "ngx": "^2.4.0",
     "ngx-bootstrap": "^6.2.0",
+    "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
     "support": "^1.1.4",
     "tslib": "^2.0.0",
