--- a/client/package.json
+++ b/client/package.json
@@ -20,10 +20,12 @@
     "@angular/platform-browser-dynamic": "~11.2.7",
     "@angular/router": "~11.2.7",
     "bootstrap": "^4.6.0",
+    "bootswatch": "^5.0.1",
     "font-awesome": "^4.7.0",
     "jquery": "^3.6.0",
     "ngx": "^2.4.0",
     "ngx-bootstrap": "^6.2.0",
+    "ngx-toastr": "^13.2.1",
     "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
     "support": "^1.1.4",
