End of section 7

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -1,4 +1,4 @@
-/* To learn more about this file see: https://angular.io/confi  g/tsconfig. */
+/* To learn more about this file see: https://angular.io/confi  g/etsconfig. */
 {
   "compileOnSave": false,
   "compilerOptions": {
@@ -13,6 +13,7 @@
     "target": "es2015",
     "module": "es2020",
     "lib": [
+      "es2019",
       "es2018",
       "dom"
     ]
