--- a/client/package.json
+++ b/client/package.json
@@ -19,12 +19,14 @@
     "@angular/platform-browser": "~11.2.7",
     "@angular/platform-browser-dynamic": "~11.2.7",
     "@angular/router": "~11.2.7",
+    "@kolkov/ngx-gallery": "^1.2.3",
     "bootstrap": "^4.6.0",
     "bootswatch": "^5.0.1",
     "font-awesome": "^4.7.0",
     "jquery": "^3.6.0",
     "ngx": "^2.4.0",
     "ngx-bootstrap": "^6.2.0",
+    "ngx-gallery": "^5.10.0",
     "ngx-toastr": "^13.2.1",
     "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
