End of section 10

--- a/client/package.json
+++ b/client/package.json
@@ -24,9 +24,10 @@
     "bootswatch": "^5.0.1",
     "font-awesome": "^4.7.0",
     "jquery": "^3.6.0",
-    "ngx": "^2.4.0",
+    "ngx": "^2.3.0",
     "ngx-bootstrap": "^6.2.0",
     "ngx-gallery": "^5.10.0",
+    "ngx-spinner": "^11.0.2",
     "ngx-toastr": "^13.2.1",
     "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
